--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Messenger</title>
+		<link rel="icon" href="./src/assets/images/logo.png" />
+		<title>Hermes</title>
 	</head>
 	<body>
 		<div id="root"></div>
